[gd_scene load_steps=3 format=3 uid="uid://dvhq3m4l0p24w"]

[ext_resource type="Script" path="res://script/game_over_ui.gd" id="1_script"]
[ext_resource type="Theme" uid="uid://b7qdxqwl3fvgd" path="res://assets/main_theme.tres" id="2_theme"]

[node name="GameOverUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 30.0
offset_right = 150.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 40
text = "KAMU KALAH!"
horizontal_alignment = 1

[node name="ReasonLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.6, 0, 1)
theme_override_font_sizes/font_size = 28
text = "Bahan Bakar Habis!"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -40.0
offset_right = 250.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Kapal kehabisan bahan bakar.
Kamu harus membakar sampah lebih cepat untuk mengisi ulang bahan bakar."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -80.0
offset_right = 220.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 30
alignment = 1

[node name="RetryButton" type="Button" parent="Panel/ButtonContainer"]
custom_minimum_size = Vector2(190, 50)
layout_mode = 2
text = "Coba Lagi"

[node name="MenuButton" type="Button" parent="Panel/ButtonContainer"]
custom_minimum_size = Vector2(190, 50)
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="Panel/ButtonContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="Panel/ButtonContainer/MenuButton" to="." method="_on_menu_button_pressed"]
